--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,11 @@
 <ion-menu [content]="NAV">
+<ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
 	<ion-content>
-		<img src="/assets/imgs/coverlogo.jpg">
+		<!--<img src="/assets/imgs/coverlogo.jpg">-->
 		<ion-list>
 			<button ion-item *ngFor= "let page of pages" (click)="goToPage(page.component)" menuClose>
 				<ion-icon item-left name="{{ page.icon }}">
