--- a/src/pages/cotizar/cotizar.scss
+++ b/src/pages/cotizar/cotizar.scss
@@ -2,4 +2,8 @@ page-cotizar {
 	.capitalize{
 		text-transform:capitalize;
 	}
+	.titulo{
+		position: absolute;
+		text-transform:capitalize;
+	}
 }
