--- a/src/pages/inicio/inicio.scss
+++ b/src/pages/inicio/inicio.scss
@@ -2,8 +2,11 @@ page-inicio {
 	.titulo{
 		color:#333;
 		text-align:center;
-	}
+	},
 	.init{
-		text-align:center;
+		height: 45vh;
+		  width: auto;
+		  margin: auto;
+		  display: block;
 	}
 }
