--- a/src/pages/entregas/entregas.scss
+++ b/src/pages/entregas/entregas.scss
@@ -1,3 +1,12 @@
 page-entregas {
-
+  .titulo{
+    color:#333;
+    text-align:center;
+  },
+  .init{
+		height: 45vh;
+		  width: auto;
+		  margin: auto;
+		  display: block;
+	}
 }
