--- a/src/pages/cotizar/cotizar.scss
+++ b/src/pages/cotizar/cotizar.scss
@@ -1,11 +1,33 @@
 page-cotizar {
 	.capitalize{
-		text-transform:capitalize;
+		text-transform: capitalize;
+
 	},
 	.title{
 		text-align:center;
 	},
 	.back{
 		background-color: #F6CECE;
+	},
+	ion-list {
+    margin: 0 !important;
+  },
+	ion-card{
+		width: 100vw;
+  	margin-left: -10px;
+	}
+	.imgCard{
+		margin-top: -50px;
+		text-align: center;
+	  align-content: center;
+	  align-self: center;
+	  max-width: 620px;
+	  max-height: 620px;
+	}
+	.up{
+		margin-top:-30px;
+	}
+	.btn{
+		margin-top: 40px;
 	}
 }
